--- a/build.gradle
+++ b/build.gradle
@@ -87,10 +87,12 @@ dependencies {
 }
 
 jar {
-    from configurations.compile.findAll { it.name != 'bluejext.jar' }.collect { it.isDirectory() ? it : zipTree(it) }
     manifest {
         attributes(
             'Main-Class': mainClass
         )
     }
+
+    from configurations.compile.findAll { it.name != 'bluejext.jar' }.collect { it.isDirectory() ? it : zipTree(it) }
+    destinationDir = file("$buildDir")
 }
