Testing operation in tools menu

--- a/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
+++ b/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
@@ -9,8 +9,7 @@ Application.homepage = https://bined.exbin.org/bluej-extension/
 Application.vendorId = ExBin Project
 Application.id = BinEdExtension
 Application.lookAndFeel = system
-
-Application.description=Binary/hexadecimal editor based on BinEd library. Use "Open as Binary" action in main menu or in files context menu.\n\n\
+Application.pluginDescription=Binary/hexadecimal editor based on BinEd library. Use "Open as Binary" action in main menu or in files context menu.\n\n\
     Features\n\
     * Visualize data as numerical (hexadecimal) codes and text representation\n\
     * Codes can be also binary, octal or decimal\n\
@@ -21,6 +20,8 @@ Application.description=Binary/hexadecimal editor based on BinEd library. Use "O
     * Support for files with size up to exabytes\n\n\
     License\n\
     Apache License, Version 2.0
+
+Application.description=Binary/Hexadecimal editor extension
 Application.license=Apache License, Version 2.0
 Application.licenseFile=/org/exbin/bined/bluej/resources/apache-2.0-standalone.html
 Application.aboutImage = /org/exbin/bined/bluej/resources/images/bined-logo.png
