--- a/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
+++ b/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
@@ -15,7 +15,7 @@ Application.pluginDescription=Binary/hexadecimal editor based on BinEd library. 
     * Codes can be also binary, octal or decimal\n\
     * Support for Unicode, UTF-8 and other charsets\n\
     * Insert and overwrite edit modes\n\
-    * Searching for text / hexadecimal code with matching highlighting\n\
+    * Searching for text / hexadecimal code with found matches highlighting\n\
     * Support for undo/redo\n\
     * Support for files with size up to exabytes\n\n\
     License\n\
