--- a/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
+++ b/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
@@ -1,15 +1,15 @@
 Application.name = BinEd Binary/Hexadecimal Editor Extension
 Application.title = BinEd BlueJ Extension
 Application.release = 0.2.0
-Application.mode = DEV
-Application.version = 0.2.0 DEV
-Application.product= BinEd Binary/Hexadecimal Editor 0.2.0 DEV
+Application.mode = 
+Application.version = 0.2.0
+Application.product= BinEd Binary/Hexadecimal Editor 0.2.0
 Application.vendor = ExBin Project
 Application.homepage = https://bined.exbin.org/bluej-extension/
 Application.vendorId = ExBin Project
 Application.id = BinEdExtension
 Application.lookAndFeel = system
-Application.pluginDescription=Binary/hexadecimal editor based on BinEd library. Use "Open as Binary" action in main menu or in files context menu.\n\n\
+Application.pluginDescription=Binary/hexadecimal editor based on BinEd library. Use "Tools/Open File as Binary" action in main menu or "Open as Binary" in files context menu.\n\n\
     Features\n\
     * Visualize data as numerical (hexadecimal) codes and text representation\n\
     * Codes can be also binary, octal or decimal\n\
