--- a/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
+++ b/src/main/resources/org/exbin/bined/bluej/resources/BinEdExtension.properties
@@ -1,9 +1,9 @@
 Application.name = BinEd Binary/Hexadecimal Editor Extension
 Application.title = BinEd BlueJ Extension
 Application.release = 0.2.1
-Application.mode = DEV
-Application.version = 0.2.1 DEV
-Application.product= BinEd Binary/Hexadecimal Editor 0.2.1 DEV
+Application.mode = 
+Application.version = 0.2.1
+Application.product= BinEd Binary/Hexadecimal Editor 0.2.1
 Application.vendor = ExBin Project
 Application.homepage = https://bined.exbin.org/bluej-extension/
 Application.vendorId = ExBin Project
